# myso-mydata

./: .gitignore  .licensesnip  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.aggregator  Dockerfile.mimir  Dockerfile.mydata-proxy  README.md  aggregator-config-railway.yaml  deny.toml  key-server-config-railway.yaml  mimir-railway.yaml  mkdocs.yml  mydata-proxy-config-railway.yaml  railway-mimir.toml  railway-mydata-aggregator.toml  railway-mydata-key-server-1.toml  railway-mydata-key-server-2.toml  railway-mydata-key-server-3.toml  railway-mydata-proxy.toml  ws-resources.json
.cargo/: config.toml
.github/workflows/: docs-deploy.yml  move.yml  rust.yml  tag.yml
crates/crypto/: Cargo.toml
crates/crypto/src/: dem.rs  elgamal.rs  gf256.rs  ibe.rs  lib.rs  polynomial.rs  prefixed_hex.rs  tss.rs  utils.rs
crates/key-server/: Cargo.toml  key-server-config.yaml
crates/key-server/src/: cache.rs  common.rs  errors.rs  externals.rs  key_server_options.rs  lib.rs  master_keys.rs  metrics.rs  metrics_push.rs  mvr.rs  mydata_package.rs  myso_rpc_client.rs  periodic_updater.rs  server.rs  signed_message.rs  time.rs  types.rs  utils.rs  valid_ptb.rs
crates/key-server/src/aggregator/: aggregator-config.yaml  mod.rs  server.rs  utils.rs
crates/key-server/src/tests/: e2e.rs  externals.rs  mod.rs  pd.rs  server.rs  test_utils.rs  tle.rs  whitelist.rs
crates/key-server/src/tests/whitelist_v1/: Move.toml
crates/key-server/src/tests/whitelist_v1/sources/: whitelist_v1.move
crates/key-server/src/tests/whitelist_v2/: Move.toml
crates/key-server/src/tests/whitelist_v2/sources/: whitelist_v2.move
crates/mydata-cli/: Cargo.toml
crates/mydata-cli/src/: main.rs
crates/mydata-committee/: Cargo.toml
crates/mydata-committee-cli/: Cargo.toml  dkg-rotation.example.yaml  dkg.example.yaml
crates/mydata-committee-cli/src/: main.rs  types.rs
crates/mydata-committee/src/: grpc_helper.rs  lib.rs  move_types.rs  types.rs  utils.rs
crates/mydata-proxy/: Cargo.toml
crates/mydata-proxy/src/: admin.rs  config.rs  consumer.rs  handlers.rs  histogram_relay.rs  lib.rs  main.rs  metrics.rs  middleware.rs  prom_to_mimir.rs  providers.rs  remote_write.rs
crates/mydata-proxy/src/providers/: mydata.rs
crates/mydata-proxy/src/providers/mydata/: provider.rs
crates/mydata-sdk/: Cargo.toml
crates/mydata-sdk/src/: lib.rs  types.rs
docker/mimir/: entrypoint.sh
docker/mydata-proxy/: Dockerfile  entrypoint.sh
docker/mydata-proxy/local-test/: config.alloy  docker-compose.yml
docker/mydata-proxy/local-test/metrics-generator/: Dockerfile
docker/mydata-proxy/local-test/metrics-generator/src/: main.rs  metrics_push.rs
docs/content/: Aggregator.mdx  Design.mdx  ExamplePatterns.mdx  GettingStarted.mdx  KeyServerCommitteeOps.mdx  KeyServerOps.mdx  MyDataCLI.mdx  Pricing.mdx  RailwayDeployment.mdx  SecurityBestPractices.mdx  TermsOfService.md  UsingMyData.mdx  index.mdx
examples/: README.md
examples/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
examples/frontend/src/: Allowlist.tsx  AllowlistView.tsx  App.tsx  CreateAllowlist.tsx  CreateSubscriptionService.tsx  EncryptAndUpload.tsx  OwnedAllowlists.tsx  OwnedSubscriptionServices.tsx  SubscriptionService.tsx  SubscriptionView.tsx  constants.ts  main.tsx  networkConfig.ts  utils.ts
examples/move/: Move.toml
examples/move/sources/: allowlist.move  subscription.move
move/committee/: Move.toml
move/committee/sources/: committee.move
move/committee/tests/: committee_tests.move
move/mydata/: Move.toml  Published.toml  README.md
move/mydata/sources/: bf_hmac_encryption.move  gf256.move  hmac256ctr.move  kdf.move  key_server.move  polynomial.move  staleness.move
move/mydata_testnet/: Move.toml  Published.toml
move/mydata_testnet/sources/: key_server.move
move/patterns/: Move.toml
move/patterns/sources/: account_based.move  key_request.move  private_data.move  subscription.move  tle.move  voting.move  whitelist.move
tests/: README.md  package.json  pnpm-lock.yaml  simple-mydata-server.test.ts
