[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.0"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d2e2d13be3e550745739144e2a090b9675e4ffcb", features = ["aes"] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d2e2d13be3e550745739144e2a090b9675e4ffcb" }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0.138"
itertools = "0.14.0"
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.13.0"
prost-types = "0.14"
tonic = "0.14.3"
semver = { version = "1.0.26", features = ["serde"] }
once_cell = "1.21.3"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3"
reqwest = "0.12"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
prometheus = "0.13.4"
chrono = "0.4"
serde_yaml = "0.9"
snap = "1.1.0"
git-version = "0.3.9"

# MySo dependencies
myso_types = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-types"}
mysten-service = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main" }
myso_sdk = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-sdk"}
shared_crypto = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "shared-crypto" }
move-core-types = { git = "https://github.com/the-social-proof-foundation/myso-core.git", branch = "main" }
prometheus_closure_metric = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "prometheus-closure-metric" }
myso-move-build = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-move-build" }
test-cluster = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "test-cluster" }
move-package-alt = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "move-package-alt" }
move-package-alt-compilation = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "move-package-alt-compilation" }
myso-package-alt = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-package-alt" }

myso-sdk-types = { git = "https://github.com/the-social-proof-foundation/myso-rust-sdk", branch = "main", features = ["serde"] }
myso-rpc = { git = "https://github.com/the-social-proof-foundation/myso-rust-sdk", branch = "main" }
myso-rpc-api = { git = "https://github.com/the-social-proof-foundation/myso-core", branch = "main", package = "myso-rpc-api" }

[profile.release]
panic = 'abort'
