[package]
name = "crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
rand.workspace = true
serde.workspace = true
hex.workspace = true
bcs.workspace = true
itertools.workspace = true
serde_with.workspace = true
myso-sdk-types.workspace = true

typenum = "1.19.0"

[dev-dependencies]
myso_types = { workspace = true }