[package]
name = "key-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "key-server"
path = "src/server.rs"

[[bin]]
name = "aggregator-server"
path = "src/aggregator/server.rs"

[dependencies]
crypto = { path = "../crypto" }
mydata-sdk = { path = "../mydata-sdk" }
mydata-committee = { path = "../mydata-committee" }

fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bcs.workspace = true
tracing.workspace = true
myso_types.workspace = true
mysten-service.workspace = true
myso_sdk.workspace = true
shared_crypto.workspace = true
move-core-types.workspace = true
semver.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
futures.workspace = true
anyhow.workspace = true
once_cell.workspace = true
serde_yaml.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_with = { workspace = true, features = ["base64"] }
prometheus_closure_metric.workspace = true
prometheus.workspace = true
snap.workspace = true
git-version.workspace = true
tonic.workspace = true
prost-types.workspace = true

tap = "1.0.1"
jsonrpsee = "0.24.0"
duration-str = "0.17.0"
moka = { version = "0.12.13", features = ["sync"] }
hostname = "0.4"
hyper-util = "0.1.20"
http-body-util = "0.1.3"

myso-sdk-types.workspace = true
myso-rpc.workspace = true
mvr_types = { git = "https://github.com/MystenLabs/mvr", rev = "1993d7188f62564b05f0ccab46bbfb24b0eea326", package = "mvr-types" }

[dev-dependencies]
tracing-test = "0.2.6"
test-cluster = { workspace = true }
myso-move-build = { workspace = true }
move-package-alt.workspace = true
temp-env = { version = "0.3", features = ["async_closure"] }
fastcrypto-tbls = { workspace = true }
wiremock = "0.5"