[package]
name = "mydata-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mydata"
path = "src/main.rs"

[dependencies]
crypto = { path = "../crypto" }
mydata-sdk = { path = "../mydata-sdk" }

clap.workspace = true
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
reqwest.workspace = true
tokio.workspace = true

myso_sdk.workspace = true
myso-sdk-types.workspace = true
myso_types.workspace = true
