[package]
name = "mydata-committee"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
prost-types.workspace = true
serde.workspace = true

myso-rpc.workspace = true
myso-sdk-types.workspace = true
myso_types.workspace = true

[dev-dependencies]
tokio.workspace = true