[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "mydata-proxy"
version.workspace = true

[[bin]]
name = "mydata-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
git-version.workspace = true
itertools.workspace = true
once_cell.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
const-str = "0.6.2"
headers = "0.4"
prometheus.workspace = true
serde = { workspace = true, features = ["derive"]}
snap.workspace = true
tokio.workspace = true

axum = {version = "0.8", default-features = false, features = ["http2", "tokio", "macros"]}
axum-extra = {version = "0.10", features = ["typed-header"]}
bytes = "1.10.1"
prost = "0.12"
protobuf = {version = "2.28", features = ["with-bytes"]}
reqwest = {version = "0.12", features = ["json", "native-tls"]}
tower-http = { version = "0.6.6", features = ["trace", "timeout"]}