[package]
name = "mydata-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crypto = { path = "../crypto" }

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fastcrypto = { workspace = true }
bcs = { workspace = true }
tracing = { workspace = true }
myso-sdk-types = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
myso_types = { workspace = true }